# biodiversity-conservation-menorca

./: README.md  ideas-iterative-modelling.docx  pyproject.toml  requirements.txt
1_documentation/minimum-area-targets/: justify_minimum_area_targets.docx
2_data/processed/: final_dataset.csv  final_dataset.geojson
3_notebooks/: 01_eda_analysis.ipynb  02_visualization_maps.ipynb
3_notebooks/experiments/: analysis.ipynb  combined_experiments_data.csv
3_notebooks/experiments/datasets/: cpsat_1_threads_500.csv  cpsat_8_threads_500.csv  metricas_CBC_500_10min_multiprocess_noseed.csv  metricas_HIGHS_500_10min_multiprocess_noseed.csv  metricas_SCIP_500_10min_multiprocess_noseed.csv  metricas_highs_8threads_500 (1).csv
3_notebooks/experiments/scripts/: experiment_highs.py  experimento_cbc.py  experimento_cplex.py  experimento_cpsat.py  experimento_gurobi.py  experimento_highs.py  experimento_scip.py  experimentos_1_thread_scip_cbc_highs.py  modelo_highs.py
3_notebooks/iterations/: Modelo_dijkstra.ipynb  borja.ipynb  v1_model.ipynb  v2_model.ipynb
4_source_code/: data_preparation.py  main.py  optimization_model.py
4_source_code/future_work/: modelo_highs.py
5_results/solutions/: solution_optimal.csv  solution_v1.csv  solution_v2.csv
6_final_submission/experiments/: analysis.ipynb
6_final_submission/experiments/datasets/: cpsat_1_threads_500.csv  cpsat_8_threads_500.csv  metricas_CBC_500_10min_multiprocess_noseed.csv  metricas_HIGHS_500_10min_multiprocess_noseed.csv  metricas_SCIP_500_10min_multiprocess_noseed.csv  metricas_highs_8threads_500 (1).csv
(+8 files in other folders)
