[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "biodiversity-conservation-menorca"
version = "0.1.0"
description = "Biodiversity conservation optimization project for Menorca"
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.0.0",
    "geopandas>=0.14.0",
    "numpy>=1.24.0",
    "networkx>=3.0",
    "ortools>=9.8",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "jupyter>=1.0.0",
]

[project.optional-dependencies]
dev = []

[tool.setuptools]
packages = []

